--- a/css/style.css
+++ b/css/style.css
@@ -1240,7 +1240,7 @@ header nav > ul.main > li:hover ~ .indicator {
     color: #fff;
     font-size: 6rem;
     font-weight: 700;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.4rem;
     transition: all 1.2s;
   }
   .sitemap > div > div > button {
@@ -3036,10 +3036,15 @@ header nav > ul.main > li:hover ~ .indicator {
   .navbar {
     display: none !important;
   }
+  .section {
+    width: 100%;
+    max-height: 80dvh;
+    box-sizing: border-box;
+  }
   /*sitemap*/
   .sitemap {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     position: fixed;
     z-index: 9999;
     left: 0;
@@ -3055,7 +3060,7 @@ header nav > ul.main > li:hover ~ .indicator {
     box-sizing: border-box;
   }
   .sitemap > svg {
-    width: 700px;
+    width: 50%;
     transform: translateY(-15%);
     position: absolute;
     right: 0;
@@ -3069,7 +3074,7 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sitemap > div > div > h2 {
     color: #fff;
-    font-size: 6rem;
+    font-size: 20vw;
     font-weight: 700;
     letter-spacing: 0.4em;
     transition: all 1.2s;
@@ -3097,12 +3102,12 @@ header nav > ul.main > li:hover ~ .indicator {
     color: #fff;
   }
   .sitemapMain > li {
-    width: calc(100% / 7);
+    width: 100%;
     border-left: 1px solid rgba(255, 255, 255, 0.15);
     padding-left: 30px;
   }
   .sitemapMain > li > a {
-    font-size: 1.5rem;
+    font-size: 5vw;
     display: block;
     opacity: 0;
     transform: translateY(-30px);
@@ -3122,19 +3127,19 @@ header nav > ul.main > li:hover ~ .indicator {
   }
 
   /*section1*/
-  .section1 {
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-  }
+
   .con1Wrap {
-    width: 100%;
+    width: 95%;
     height: 100%;
     position: relative;
     flex-direction: column;
     display: flex;
+    padding: 0% 1%;
   }
   /*con1 Left*/
+  .con1Wrap ul {
+    width: 100%;
+  }
   .con1Wrap ul:first-child {
     width: 100%;
     height: 50%;
@@ -3146,9 +3151,10 @@ header nav > ul.main > li:hover ~ .indicator {
     top: 0;
     width: 100%;
     height: 100%;
-    padding: 2%;
+    padding: 2% 1%;
     box-sizing: border-box;
     display: none;
+    word-break: keep-all;
   }
   .con1Wrap ul:first-child li > div {
     margin-top: 50px;
@@ -3186,6 +3192,7 @@ header nav > ul.main > li:hover ~ .indicator {
     margin: 5px 0px;
     margin-left: 10px;
     color: #222;
+    width: auto;
   }
   .con1Wrap ul:first-child li:first-child {
     display: block;
@@ -3278,8 +3285,9 @@ header nav > ul.main > li:hover ~ .indicator {
     cursor: pointer;
     transition: 1s;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 1%;
     border-radius: 10px 10px 0px 0px;
+    font-size: 4vw;
   }
   .con1Wrap ul:nth-child(3) li.on {
     height: 150px;
@@ -3302,11 +3310,6 @@ header nav > ul.main > li:hover ~ .indicator {
   }
 
   /*section2*/
-  .section2 {
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-  }
 
   .sec2con {
     width: 100%;
@@ -3323,7 +3326,7 @@ header nav > ul.main > li:hover ~ .indicator {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 0% 2%;
+    padding: 0% 1%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -3331,14 +3334,15 @@ header nav > ul.main > li:hover ~ .indicator {
     transition: 1s;
     position: relative;
   }
+
   .item span {
     color: #b8afa3;
-    font-size: 20px;
+    font-size: 5vw;
     transition: 1s;
   }
   .item h2 {
     color: #fff;
-    font-size: 40px;
+    font-size: 7vw;
     margin: 5px 0px;
   }
   .item > div {
@@ -3346,12 +3350,14 @@ header nav > ul.main > li:hover ~ .indicator {
     z-index: 20;
   }
   .item > div > div {
-    margin-top: 25px;
-    display: none;
+    display: block;
     transition: 1s;
+    font-size: 4vw;
+    color: #fff;
+    margin: 10px 0px;
   }
   .item.on span {
-    font-size: 14px;
+    font-size: 5vw;
     color: #b8afa3;
   }
   .item.on h2 {
@@ -3390,10 +3396,10 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   /*section3*/
   .section3 {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   /*sec3글씨*/
   .sec3word {
@@ -3405,11 +3411,11 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sec3word span {
     color: #e67e22;
-    font-size: 14px;
+    font-size: 4vw;
     font-weight: bold;
   }
   .sec3word h2 {
-    font-size: 2rem;
+    font-size: 10vw;
     margin-top: 10px;
     color: #222;
   }
@@ -3461,11 +3467,7 @@ header nav > ul.main > li:hover ~ .indicator {
     animation-delay: 0.1s;
   }
   /*section4*/
-  .section4 {
-    width: 97%;
-    height: 100vh;
-    box-sizing: border-box;
-  }
+
   .sec4word {
     width: 100%;
     height: 65%;
@@ -3488,11 +3490,11 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sec4word > div > div > span {
     color: #e67e22;
-    font-size: 14px;
+    font-size: 4vw;
     font-weight: bold;
   }
   .sec4word > div > div > h2 {
-    font-size: 2rem;
+    font-size: 10vw;
     color: #222;
   }
   .sec4word .info {
@@ -3520,14 +3522,14 @@ header nav > ul.main > li:hover ~ .indicator {
   /*월드맵*/
   .sec4word .world {
     display: flex;
-    width: 100%;
-    gap: 20px;
+    width: 95%;
+    gap: 10px;
   }
   .sec4word .world li {
-    width: 165px;
+    width: calc(100% / 3 - 5px);
     text-align: center;
     border-radius: 20px;
-    padding: 2%;
+    padding: 2% 1%;
     box-sizing: border-box;
     background-color: #f7f7f7;
     color: #222;
@@ -3537,7 +3539,9 @@ header nav > ul.main > li:hover ~ .indicator {
     color: #fff;
   }
   .sec4word .world img {
-    margin-top: 20px;
+    margin-top: 0px;
+    width: 70%;
+    height: 70%;
   }
   .sec4word .world li.active img {
     filter: brightness(0) invert(1);
@@ -3549,6 +3553,12 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sec4word .world li:hover img {
     filter: brightness(0) invert(1);
+  }
+  .sec4word .world li span {
+    font-size: 3vw;
+  }
+  .sec4word .world li h3 {
+    font-size: 5vw;
   }
   /*오른쪽 이미지 박스*/
   .imgBox {
@@ -3580,15 +3590,14 @@ header nav > ul.main > li:hover ~ .indicator {
     display: block;
   }
   /*section5*/
-  .section5 {
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-  }
+
   .sec5con {
     width: 100%;
     height: 100%;
-    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0px auto;
   }
   .sec5word {
     position: relative;
@@ -3636,31 +3645,40 @@ header nav > ul.main > li:hover ~ .indicator {
     position: relative;
     width: 90%;
     height: 320px;
-    margin: 100px auto;
     transition: 1s;
     padding: 0% 1%;
+    margin: 0px 0px;
   }
   /*news, notice*/
 
   .sec5con .news,
   .sec5con .notice {
     width: 100%;
-    height: auto;
+    height: 80%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    overflow: hidden;
     gap: 10px;
+    position: relative;
   }
   .sec5con .news li,
   .sec5con .notice li {
-    width: calc(100% / 2 - 5px);
-    height: auto;
+    width: 100%;
+    height: 100%;
     padding: 2%;
     box-sizing: border-box;
     border-radius: 20px;
     border: 2px solid transparent;
     box-shadow: 0px 0px 15px 0px rgba(184, 175, 163, 0.3);
     transition: 1s;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+  }
+  .sec5con .news li:first-child,
+  .sec5con .notice li:first-child {
+    display: block;
   }
   .sec5con .news li a,
   .sec5con .notice li a {
@@ -3671,7 +3689,7 @@ header nav > ul.main > li:hover ~ .indicator {
   .sec5con .news li a h4,
   .sec5con .notice li a h4 {
     margin-bottom: 30px;
-    font-size: 18px;
+    font-size: 6vw;
     text-overflow: ellipsis;
     overflow: hidden;
     display: -webkit-box;
@@ -3719,7 +3737,7 @@ header nav > ul.main > li:hover ~ .indicator {
     width: 100%;
     height: 50px;
     display: flex;
-    margin: 50px 0px;
+
     justify-content: space-between;
     align-items: center;
   }
@@ -3755,11 +3773,11 @@ header nav > ul.main > li:hover ~ .indicator {
     height: 100vh;
     font-size: 0.8rem;
     background-color: #000;
+    padding: 5% 2%;
   }
   .footerBox {
     width: 100%;
     height: 100%;
-    padding: 5% 2%;
     box-sizing: border-box;
     background-color: #000;
   }
@@ -3822,7 +3840,7 @@ header nav > ul.main > li:hover ~ .indicator {
     justify-content: left;
     gap: 0px 30px;
     color: #fff;
-    font-size: 1rem;
+    font-size: 3.5vw;
     font-weight: bold;
     width: 100%;
     margin: 10px 0px;
@@ -3901,14 +3919,21 @@ header nav > ul.main > li:hover ~ .indicator {
 
   .footer .address > div b {
     color: #fff;
+    min-width: 65px;
   }
   .footer .address > div p {
     color: #9e9e9e;
+    width: auto;
   }
 
   .logos {
     display: flex;
     gap: 10px;
+  }
+  /*logo*/
+  .logos img {
+    width: 80%;
+    height: 80%;
   }
   /*right2*/
   .right2 {
@@ -3916,9 +3941,9 @@ header nav > ul.main > li:hover ~ .indicator {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
+    margin: 15px 0px;
   }
   .right2 .num {
-    margin: 5px 0px;
     align-items: center;
     display: flex;
     color: #fff;
