--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ ul {
 body,
 html {
   color: #666;
+  overflow-x: hidden;
 }
 
 .wrap {
@@ -3616,6 +3617,7 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sec5word {
     position: relative;
+    width: 100%;
   }
   .sec5word > div {
     height: 104px;
@@ -3624,7 +3626,7 @@ header nav > ul.main > li:hover ~ .indicator {
     padding: 0% 2%;
   }
   .sec5word span {
-    font-size: 14px;
+    font-size: 4vw;
     color: #f29100;
     font-weight: bold;
   }
@@ -3633,7 +3635,8 @@ header nav > ul.main > li:hover ~ .indicator {
     color: #222;
   }
   .sec5word .btn {
-    width: 160px;
+    width: auto;
+    gap: 10px;
     display: flex;
     position: absolute;
     right: 1%;
