--- a/css/style.css
+++ b/css/style.css
@@ -716,6 +716,17 @@ header nav > ul.main > li:hover ~ .indicator {
 .map svg {
   width: 85%;
 }
+
+.map svg:first-child {
+  height: 100%;
+  width: 85%;
+  display: block;
+}
+.map svg:last-child {
+  height: 100%;
+  width: 85%;
+  display: none;
+}
 .koreaPopup {
   display: none;
 }
@@ -1647,6 +1658,17 @@ header nav > ul.main > li:hover ~ .indicator {
   .map svg {
     width: 100%;
   }
+
+  .map svg:first-child {
+    height: 100%;
+    width: 100%;
+    display: block;
+  }
+  .map svg:last-child {
+    height: 100%;
+    width: 100%;
+    display: none;
+  }
   .koreaPopup {
     display: none;
   }
@@ -2535,8 +2557,16 @@ header nav > ul.main > li:hover ~ .indicator {
     justify-content: center;
     align-items: flex-end;
   }
-  .map svg {
+
+  .map svg:first-child {
+    height: 100%;
     width: 100%;
+    display: block;
+  }
+  .map svg:last-child {
+    height: 100%;
+    width: 100%;
+    display: none;
   }
   .koreaPopup {
     display: none;
@@ -3160,16 +3190,18 @@ header nav > ul.main > li:hover ~ .indicator {
     height: 100%;
     position: relative;
     flex-direction: column;
+    align-items: center;
     display: flex;
     padding: 0% 1%;
   }
   /*con1 Left*/
   .con1Wrap ul {
     width: 100%;
+    margin: 20px 0px;
   }
   .con1Wrap ul:first-child {
     width: 100%;
-    height: 50%;
+    height: 30%;
     position: relative;
   }
   .con1Wrap ul:first-child li {
@@ -3210,8 +3242,8 @@ header nav > ul.main > li:hover ~ .indicator {
     margin-left: 10px;
   }
   .con1Wrap ul:first-child li div h2 {
-    font-size: 2rem;
-    margin: 20px 0px;
+    font-size: 8vw;
+    margin: 5px 0px;
     margin-left: 10px;
     color: #222;
   }
@@ -3220,6 +3252,7 @@ header nav > ul.main > li:hover ~ .indicator {
     margin-left: 10px;
     color: #222;
     width: auto;
+    font-size: 4vw;
   }
   .con1Wrap ul:first-child li:first-child {
     display: block;
@@ -3228,17 +3261,17 @@ header nav > ul.main > li:hover ~ .indicator {
   /*버튼*/
   .con1Wrap .more {
     display: flex;
-    margin-top: 50px;
+    margin-top: 10px;
     width: 240px;
   }
   .con1Wrap .more .word {
     font-size: 14px;
     width: 180px;
-    height: 60px;
+    height: 35px;
   }
   .con1Wrap .cir {
-    width: 60px;
-    height: 60px;
+    width: 35px;
+    height: 35px;
   }
   .word a {
     width: 100%;
@@ -3302,7 +3335,7 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .con1Wrap ul:nth-child(3) li {
     width: calc(100% / 3 - 10px);
-    height: 50px;
+    height: 75px;
     box-shadow: 10px -10px 15px -5px #d6d3d3;
     align-items: center;
     display: flex;
@@ -3319,17 +3352,15 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .con1Wrap ul:nth-child(3) li.on {
     height: 75px;
+    border: 0.5px solid rgba(242, 145, 0, 0.2);
   }
 
   .con1Wrap ul:nth-child(3) li img {
     transition: 1s;
-    scale: 0;
-    width: 50px;
-    height: 0px;
-    object-fit: contain;
-  }
-  .con1Wrap ul:nth-child(3) li:first-child img {
     scale: 1;
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
   }
 
   .con1Wrap ul:nth-child(3) li.on img {
@@ -3439,11 +3470,11 @@ header nav > ul.main > li:hover ~ .indicator {
   }
   .sec3word span {
     color: #e67e22;
-    font-size: 4vw;
+    font-size: 3vw;
     font-weight: bold;
   }
   .sec3word h2 {
-    font-size: 10vw;
+    font-size: 8vw;
     margin-top: 10px;
     color: #222;
   }
@@ -3455,9 +3486,15 @@ header nav > ul.main > li:hover ~ .indicator {
     justify-content: center;
     align-items: flex-end;
   }
-  .map svg {
-    width: 100%;
+  .map svg:first-child {
     height: 100%;
+    width: 100%;
+    display: none;
+  }
+  .map svg:last-child {
+    height: 100%;
+    width: 100%;
+    display: block;
   }
   .koreaPopup {
     display: none;
@@ -3618,7 +3655,9 @@ header nav > ul.main > li:hover ~ .indicator {
     display: block;
   }
   /*section5*/
-
+  .section5 {
+    padding-top: 3% 0%;
+  }
   .sec5con {
     width: 100%;
     height: 100%;
